--- a/Frontend/create-post.html
+++ b/Frontend/create-post.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <span id="welcome-message" class="welcome-message">Welcome User</span>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="login.html">Logout</a>
             <a href="search.html" class="search-icon">
