--- a/Frontend/post-details.html
+++ b/Frontend/post-details.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <span id="welcome-message" class="welcome-message">Welcome User</span>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="create-post.html">Create Post</a>
             <a href="login.html" id="logout-link">Logout</a>
