--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <span id="welcome-message" class="welcome-message">Welcome User</span>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="create-post.html">Create Post</a>
             <a href="login.html" onclick="logout()">Logout</a>
             <a href="search.html" class="search-icon">
