--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="login.html">Login</a>
+            <a href="index.html">Login</a>
         </nav>
     </header>
 
